fix navbar darkmode toggle on mobile Not perfect: After toggling darkmode, the first time the navbar toggler is clicked, there is no transition. I dunno why. The transition is only .3s anyway, so I'll call this *good enough*

--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -2,6 +2,62 @@
 @use "sass:map";
 @import "../styles/variables";
 
+.topBtns {
+  cursor: pointer;
+  padding: 7px;
+  border-radius: 5px;
+  z-index: 300;
+  display: none;
+  @media (max-width: 767.98px) {
+    display: block;
+  }
+  > svg > line {
+    stroke-width: 2px;
+    stroke-linecap: round;
+  }
+}
+.toggle {
+  position: fixed;
+  top: 15px;
+  right: 15px;
+}
+.homeBtn {
+  position: fixed;
+  top: 15px;
+  right: 70px;
+}
+
+@media (max-width: 767.98px) {
+  .toggleEnterActive, .toggleEnterDone {
+    line:first-of-type {
+      transform: translate(12px, 12px) rotate(45deg) translate(-12px, -6px);
+      transition: .3s ease-in-out;
+    }
+    line:last-of-type {
+      transform: translate(12px, 12px) rotate(-45deg) translate(-12px, -18px);
+      transition: .3s ease-in-out;
+    }
+  }
+  .toggleExit {
+    line:first-of-type {
+      transform: translate(12px, 12px) rotate(45deg) translate(-12px, -6px);
+    }
+    line:last-of-type {
+      transform: translate(12px, 12px) rotate(-45deg) translate(-12px, -18px);
+    }
+  }
+  .toggleExitActive {
+    line:first-of-type {
+      transform: translateY(0px);
+      transition: .3s ease-in-out;
+    }
+    line:last-of-type {
+      transform: translateY(0px);
+      transition: .3s ease-in-out;
+    }
+  }
+}
+
 @mixin manage-theme($name, $theme-map) {
   $background: map.get($theme-map, "background");
   $foreground: map.get($theme-map, "foreground");
@@ -11,111 +67,60 @@
   $light: $background;
   $dark: $foreground;
   $text-muted: $gray;
-  .topBtns#{$name} {
-    cursor: pointer;
-    padding: 7px;
-    z-index: 300;
+  .topBtns.#{$name} {
     transition: .15s ease-in-out;
-    display: none;
-    @media (max-width: 767.98px) {
-      display: block;
-    }
     > svg > line {
       stroke: $foreground;
-      stroke-width: 2px;
-      stroke-linecap: round;
     }
     &:hover {
       border-color: $gray;
     }
-    &.downEnough#{$name} {
+    &.downEnough {
       border: 1px solid mix($gray, $background, 40%);
-      border-radius: 5px;
       background: mix($gray, $background, 20%);
     }
-    &.notDownEnough#{$name} {
+    &.notDownEnough {
       border: 1px solid $background;
-      border-radius: 5px;
       background: $background;
     }
   }
-  
-  .toggle#{$name} {
-    position: fixed;
-    top: 15px;
-    right: 15px;
-  }
-  .homeBtn#{$name} {
-    position: fixed;
-    top: 15px;
-    right: 70px;
-  }
-  
+
   @media (max-width: 767.98px) {
-    .leftPanel#{$name} {
+    .leftPanel {
       position: fixed;
       top: 0;
       left: 0;
       right: 0;
       z-index: 200;
-      background: $background;
       box-shadow: none;
       overflow: hidden;
       height: 0;
+      &.#{$name} { background: $background; }
     }
-    .leftPanelEnter#{$name} {
+    .leftPanelEnter {
       height: 0;
       box-shadow: none;
     }
-    .leftPanelEnterActive#{$name} {
+    .leftPanelEnterActive {
       height: 500px;
-      box-shadow: $box-shadow;
+      &.#{$name} { box-shadow: $box-shadow; }
       transition: .3s ease-in-out;
     }
-    .leftPanelEnterDone#{$name} {
+    .leftPanelEnterDone {
       height: 500px;
-      box-shadow: $box-shadow;
+      &.#{$name} { box-shadow: $box-shadow; }
     }
-    .leftPanelExit#{$name} {
+    .leftPanelExit {
       height: 500px;
-      box-shadow: $box-shadow;
+      &.#{$name} { box-shadow: $box-shadow; }
     }
-    .leftPanelExitActive#{$name} {
+    .leftPanelExitActive {
       height: 0;
       box-shadow: none;
       transition: .3s ease-in-out;
-    }
-  
-    .toggleEnterActive#{$name}, .toggleEnterDone#{$name} {
-      line:first-of-type {
-        transform: translate(12px, 12px) rotate(45deg) translate(-12px, -6px);
-        transition: .3s ease-in-out;
-      }
-      line:last-of-type {
-        transform: translate(12px, 12px) rotate(-45deg) translate(-12px, -18px);
-        transition: .3s ease-in-out;
-      }
-    }
-    .toggleExit#{$name} {
-      line:first-of-type {
-        transform: translate(12px, 12px) rotate(45deg) translate(-12px, -6px);
-      }
-      line:last-of-type {
-        transform: translate(12px, 12px) rotate(-45deg) translate(-12px, -18px);
-      }
-    }
-    .toggleExitActive#{$name} {
-      line:first-of-type {
-        transform: translateY(0px);
-        transition: .3s ease-in-out;
-      }
-      line:last-of-type {
-        transform: translateY(0px);
-        transition: .3s ease-in-out;
-      }
     }
   }
 }
 
-@include manage-theme(Light, $light-theme);
-@include manage-theme(Dark, $dark-theme);
+@include manage-theme(light, $light-theme);
+@include manage-theme(dark, $dark-theme);
